memory usage tweaks
Various tweaks to not use excessive memory for builds/tests

1) surefire did not need 4GB removed the entry to use the default in the
   plugin pom (756MB)
2) update to git-plugin to skip hooks in sample repos (tests go from
   10+minutes with timeouts to < 3 minutes locally)
3) update the jest harness so that agents launched from JenkinsRule have
   an upper memory limit specified (-Xmx512M)

All tests pass locally on my windows machine.